Optimize 48 Signature Java pages (#48)
Auto-merge: Optimize 48 Signature Java pages (arbiter score 100/100)